finalized full width image and table components, adding to kitchen sink page

--- a/src/components/full-width-image/_full-width-image.scss
+++ b/src/components/full-width-image/_full-width-image.scss
@@ -1,3 +1,7 @@
+.paragraph-widget--full-width-image {
+  @extend %full-width-component;
+}
+
 .full-width-image {
   margin: 0;
 }
@@ -5,9 +9,10 @@
 .full-width-image__image {
   @extend %responsive-img;
   &:before {
-    padding-top: 66.66%;
+    padding-top: 37.34%;
   }
 }
 .full-width-image__caption {
   @extend %caption;
+  @extend %outer-pad-x;
 }
