--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -82,6 +82,22 @@
       </figure>
       <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       
+      <h2>Full Width Image</h2>
+    </div>
+  </div>
+  <div class="paragraph-widget paragraph-widget--full-width-image">
+    {% include "@full-width-image" with full_width_image %}
+  </div>
+  <div class="paragraph-widget paragraph-widget--text-html">
+    <div class="text-content">
+      <h2>Tables</h2>
+    </div>
+  </div>
+  <div class="paragraph-widget paragraph-widget--table">
+    {% include "@table" with table %}
+  </div>
+  <div class="paragraph-widget paragraph-widget--text-html">
+    <div class="text-content">
       <h2>Accordions</h2>
     </div>
   </div>
