--- a/src/components/table/table.twig
+++ b/src/components/table/table.twig
@@ -1,18 +1,21 @@
-<table class="table table--theme-default table--stacked" data-tablesaw-mode="stack">
-    <thead>
-        <tr>
-            {% for header in headers %}
-                <th>{{ header }}</th>
-            {% endfor %}
-        </tr>
-    </thead>
-    <tbody>
-        {% for row in rows %}
-            <tr>
-                {% for column in row %}
-                    <td>{{ column }}</td>
-                {% endfor %}
-            </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div class="table" role="region" aria-labelledby="{{ caption_ID }}" tabindex="0">
+  <table>
+    <caption id="{{ caption_ID }}">{{table_caption}}</caption>
+      <thead>
+          <tr>
+              {% for header in headers %}
+                  <th>{{ header }}</th>
+              {% endfor %}
+          </tr>
+      </thead>
+      <tbody>
+          {% for row in rows %}
+              <tr>
+                  {% for column in row %}
+                      <td>{{ column }}</td>
+                  {% endfor %}
+              </tr>
+          {% endfor %}
+      </tbody>
+  </table>
+</div>
