--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -10,6 +10,7 @@ $light-grey: #ebebeb;
 $dark-grey: #003d4c;
 $grey: #4a4a4a;
 $grey2: #e0e0e0;
+$grey3: #f3f3f3;
 $black: #000000;
 $red: #c8102e;
 $red2: #7c2529;
