site header progress, cleaning up video embed js

--- a/src/components/_page-preview.twig
+++ b/src/components/_page-preview.twig
@@ -22,7 +22,7 @@
     <body>
         <a class="skip-link" href="#main-content">Skip To Main Content</a>
         <div class="max-bound">
-          {# {% include "@site-header" with header %} #}
+          {% include "@site-header" with header %}
           <main id="main-content">
             {{ yield }}
           </main>
