--- a/src/components/site-header/site-header.twig
+++ b/src/components/site-header/site-header.twig
@@ -1,6 +1,7 @@
 <header class="site-header">
   <a href="placeholder-link" class="site-header__logo">
-    <img src="{{ "/img/iowa-state-university-logo-no-tagline-red.svg"|path }}" alt="Carthage College logo">
+    <img class="site-header__logo-mobile" src="{{ "/img/iowa-state-university-logo-no-tagline-red.svg"|path }}" alt="Carthage College logo">
+    <img class="site-header__logo-desktop" src="{{ "/img/iowa-state-university-logo-with-tagline-red.svg"|path }}" alt="Carthage College logo">
   </a>
   <div class="site-header__top">
     <nav class="site-header__utility" aria-label="Utility">
