adding form elements - styling completed

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -44,6 +44,7 @@
 @import "../components/share/share";
 @import "../components/video-embed/video-embed";
 @import "../components/table/table";
+@import "../components/form/form";
 @import "../components/subnav/subnav";
 @import "../components/full-width-image/full-width-image";
 @import "../components/call-to-action/call-to-action";
