--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -30,6 +30,7 @@
   @include media-breakpoint-up(lg) {
     max-width: rem(346);
     top: rem(37);
+    width: 25%;
   }
   @include media-breakpoint-up(xl) {
     left: rem(82);
@@ -74,26 +75,32 @@
   justify-content: flex-end;
   border-bottom: rem(1) solid $grey4;
   @include media-breakpoint-up(lg) {
-    padding: 0 rem(60) 0;
+    padding: 0 rem(20) 0;
     height: rem(117);
     align-items: flex-start;
   }
+  @include media-breakpoint-up(xl) {
+    padding: 0 rem(60) 0;
+  }
   ul {
     display: flex;
-    @include media-breakpoint-up(lg) {
-      margin-left: rem(-18);
-    }
-    @include media-breakpoint-up(xl) {
-      margin-left: rem(-24);
-    }
   }
   li {
     padding-top: rem(2);
     @include media-breakpoint-up(lg) {
-      padding-left: rem(18);
+      padding-top: 0;
+      padding-right: rem(18);
     }
     @include media-breakpoint-up(xl) {
-      padding-left: rem(24);
+      padding-right: rem(25);
+    }
+    @include media-breakpoint-up(xxl) {
+      padding-right: rem(46);
+    }
+    &:last-child {
+      @include media-breakpoint-up(xl) {
+        padding-right: 0;
+      }
     }
   }
 }
@@ -103,6 +110,10 @@
   display: none;
   @include media-breakpoint-up(lg) {
     display: block;
+    margin-top: rem(27);
+  }
+  @include media-breakpoint-up(xl) {
+    margin-right: rem(53);
   }
   a {
     @include media-breakpoint-up(lg) {
@@ -110,8 +121,12 @@
       color: $red2;
       font-family: $nimbus-sans-regular;
       font-weight: 400;
-      font-size: rem(16);
+      font-size: rem(14);
+      line-height: (24 / 14);
       text-decoration: none;
+    }
+    @include media-breakpoint-up(xl) {
+      font-size: rem(16);
       line-height: (26 / 16);
     }
   }
@@ -136,6 +151,10 @@
   align-self: stretch;
   height: rem(54);
   width: rem(54);
+  @include media-breakpoint-up(lg) {
+    position: relative;
+    top: rem(14);
+  }
 }
 
 .site-header__search-toggle {
@@ -249,7 +268,6 @@
       margin-bottom: rem(7);
       transform-origin: center center;
       transition: 0.2s transform ease-in-out, 0.2s opacity ease-in-out, 0.2s border-color ease-in-out;
-      // transition: 3.2s transform ease-in-out, 3.2s opacity ease-in-out;
       position: relative;
       &:last-child {
         margin-bottom: 0;
@@ -287,6 +305,7 @@
   @include media-breakpoint-up(lg) {
     background-color: transparent;
     padding: 0;
+    margin-top: rem(13);
   }
 }
 
@@ -298,30 +317,10 @@
       width: 65%;
       margin: 0 0 0 auto;
     }
-    &:hover {
-      > li {
-        @include media-breakpoint-up(lg) {
-          opacity: 0.65;
-          &:hover {
-            opacity: 1;
-          }
-        }
-      }
-    }
-    &:focus-within {
-      > li {
-        @include media-breakpoint-up(lg) {
-          opacity: 0.65;
-          &:focus-within {
-            opacity: 1;
-          }
-        }
-      }
-    }
     > li {
       margin-bottom: rem(22);
       @include media-breakpoint-up(lg) {
-        flex: 1 1 0px;
+        padding-right: rem(30);
         margin-bottom: 0;
         transition: 0.3s opacity ease-in-out;
         position: relative;
@@ -337,9 +336,37 @@
           font-size: rem(16);
           line-height: (26 / 16);
           margin: 0;
-          &:before,
-          &:after {
+          border-radius: 0;
+          &:before {
             display: none;
+          }
+          &:after {
+            @include media-breakpoint-up(lg) {
+              content: "";
+              display: block;
+              position: absolute;
+              right: rem(-16);
+              top: rem(5);
+              width: rem(10);
+              height: rem(10);
+              border-right: rem(2) solid $red;
+              border-bottom: rem(2) solid $red;
+              transform: rotate(45deg);
+              transform-origin: center;
+              transition: 0.2s transform ease-in-out, 0.2s top ease-in-out;
+            }
+          }
+        }
+
+        &:hover {
+          @include media-breakpoint-up(lg) {
+            background-color: transparent;
+            padding-right: 0;
+          }
+        }
+        &[aria-expanded="true"] {
+          @include media-breakpoint-up(lg) {
+            border-bottom: rem(7) solid $yellow;
           }
         }
       }
@@ -357,13 +384,16 @@
         @include media-breakpoint-up(lg) {
           background-color: $white;
           margin-top: rem(24);
-          padding: rem(52) rem(52) rem(38);
-          top: 0;
+          padding: rem(40) rem(52) rem(5) rem(52);
+          top: rem(11);
           right: initial;
           left: initial;
           bottom: initial;
           box-shadow: rem(9) rem(9) rem(20) rgba($black, 0.2);
           min-width: rem(405);
+          left: rem(-120);
+          display: flex;
+          flex-wrap: wrap;
         }
         &[aria-hidden="true"] {
           opacity: 0;
@@ -378,10 +408,27 @@
           transform: none;
           visibility: visible;
         }
+        &.two-column-dropdown {
+          @include media-breakpoint-up(lg) {
+            min-width: rem(727);
+            left: rem(-243);
+          }
+          li {
+            @include media-breakpoint-up(lg) {
+              width: 50%;
+            }
+          }
+        }
 
         li {
           margin-bottom: rem(10);
           padding-left: rem(14);
+          @include media-breakpoint-up(lg) {
+            flex: 0 1 auto;
+            width: 100%;
+            padding-left: 0;
+            margin-bottom: rem(13);
+          }
 
           &.site-header__mega-menu-main-nav-dropdown-back-wrap {
             margin-bottom: rem(8);
@@ -404,12 +451,23 @@
       }
       &:last-child {
         margin-bottom: 0;
+        padding-right: 0;
       }
       &:hover {
         opacity: 1;
       }
       .user-tabbing &:focus-within {
         opacity: 1;
+      }
+
+      &:last-child,
+      &:nth-last-child(2) {
+        > ul {
+          @include media-breakpoint-up(lg) {
+            right: 0;
+            left: initial;
+          }
+        }
       }
     }
   }
@@ -432,8 +490,7 @@
   }
 }
 
-.site-header__mega-menu-main-nav-dropdown-back-wrap,
-.site-header__mega-menu-main-nav-dropdown-parent-wrap {
+.site-header__mega-menu-main-nav-dropdown-back-wrap {
   @include media-breakpoint-up(lg) {
     display: none;
   }
@@ -483,6 +540,16 @@
   transition: 0.3s transform ease-in-out;
 }
 
+.site-header__mega-menu-main-nav-dropdown-parent-wrap {
+  @include media-breakpoint-up(lg) {
+    order: 1;
+    width: 100% !important;
+    border-top: rem(2) solid $yellow;
+    margin-top: rem(45);
+    padding-top: rem(25);
+  }
+}
+
 a.site-header__mega-menu-main-nav-dropdown-parent {
   font-family: $nimbus-sans-bold;
   font-size: rem(21);
@@ -491,59 +558,17 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
   color: $white;
   text-decoration: none;
   margin-left: rem(-14);
-}
-
-.site-header__mega-menu-info {
-  background-color: blue;
-  padding: rem(32) rem(30) rem(42);
   @include media-breakpoint-up(lg) {
-    padding: rem(42) rem(90);
-  }
-  @media (min-width: 1000px) and (max-height: 1000px) {
-    padding: rem(32) rem(90);
-  }
-}
-
-.site-header__mega-menu-info-nav {
-  @include media-breakpoint-up(lg) {
-    align-items: flex-start;
-    display: flex;
-    justify-content: flex-start;
-  }
-  ul {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 0 rem(-18) rem(-18);
-    @include media-breakpoint-up(lg) {
-      margin: 0 0 rem(-24) rem(-24);
-    }
-  }
-  li {
-    flex: 0 1 auto;
-    padding: 0 0 rem(18) rem(18);
-    width: 50%;
-    @include media-breakpoint-up(lg) {
-      flex: 0 0 auto;
-      padding: 0 0 rem(24) rem(24);
-      width: auto;
-    }
-  }
-  a {
-    @media (min-width: 1000px) and (max-height: 1000px) {
-      font-size: rem(16);
-    }
-    .fancy-link__icon {
-      display: none;
-      @include media-breakpoint-up(lg) {
-        display: inline-block;
-      }
-    }
+    color: $red2;
+    font-size: rem(18);
+    line-height: (31 / 18);
+    margin-left: 0;
   }
 }
 
 .site-header__mega-menu-secondary {
   background-color: $red;
-  padding: 0 rem(36);
+  padding: 0 rem(36) rem(60);
   @include media-breakpoint-up(lg) {
     display: none;
   }
@@ -574,52 +599,84 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
   }
 }
 
-.site-header__mega-menu-search {
-  display: flex;
-}
+.site-search {
+  display: none;
 
-.site-header__mega-menu-search-input,
-.site-header__mega-menu-search-submit {
-  background-color: blue;
-  color: tomato;
-}
-
-.site-header__mega-menu-search-input {
-  appearance: none;
-  border: none;
-  color: tomato;
-  font-size: rem(14);
-  font-weight: 700;
-  flex: 1 1 0px;
-  margin: 0;
-  padding: rem(2) rem(18) 0;
-  &::placeholder {
-    color: tomato;
-    letter-spacing: em(1.5, 14);
-    opacity: 1;
-    text-transform: uppercase;
+  .modal__overlay {
+    display: block;
+    z-index: 11;
+    background-color: rgba($red, 0.95);
   }
-}
-
-.site-header__mega-menu-search-submit {
-  flex: 0 0 auto;
-  height: rem(44);
-  width: rem(44);
-  position: relative;
-  transition: 0.3s color ease-in-out;
-  .icon {
-    fill: currentColor;
-    height: rem(18);
-    width: rem(18);
+  .modal__container {
+    background-color: transparent;
     position: absolute;
     top: 50%;
     left: 50%;
-    stroke: currentColor;
     transform: translate(-50%, -50%);
+    padding: 0;
+    max-width: rem(1061);
+    width: 85%;
   }
-  &:hover,
-  .user-tabbing &:focus {
-    background-color: red;
+  .modal__close {
+    position: fixed;
+    top: rem(4);
+    right: rem(0);
+    width: rem(44);
+    height: rem(44);
+    cursor: pointer;
+    z-index: 12;
+    font-size: rem(37);
     color: $white;
+    &:before {
+      display: none;
+    }
+
+    svg {
+      position: relative;
+      top: rem(-11);
+      left: rem(9);
+    }
+  }
+  .site-search__form-input {
+    border: none;
+    height: rem(44);
+    background-color: $white;
+    color: $red2;
+    font-size: rem(18);
+    flex: 1 1 0px;
+    line-height: (33 / 18);
+    padding: rem(2) rem(28) 0;
+    width: 100%;
+    @include media-breakpoint-up(lg) {
+      height: rem(60);
+    }
+    &::placeholder {
+      font-family: $nimbus-sans-regular-italic;
+      font-weight: 400;
+      font-style: italic;
+      color: $red2;
+      opacity: 0.8;
+    }
+  }
+}
+
+.site-search__form-inner {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.site-search__form-submit {
+  background-color: transparent;
+  border: none;
+  color: $white;
+  flex: 0 0 auto;
+  height: rem(56);
+  width: rem(56);
+  position: relative;
+  transition: 0.3s background-color ease-in-out;
+  font-size: rem(35);
+  @include media-breakpoint-up(lg) {
+    font-size: rem(40);
   }
 }
