--- a/src/components/multi-column-text/_multi-column-text.scss
+++ b/src/components/multi-column-text/_multi-column-text.scss
@@ -3,6 +3,11 @@
     display: flex;
     margin-right: rem(-40);
   }
+  &.multi-column-text-two-col {
+    @include media-breakpoint-up(md) {
+      margin-right: rem(-100);
+    }
+  }
 }
 .multi-column-text__column {
   margin: rem(40) 0;
@@ -10,5 +15,10 @@
     flex: 1 1 0px;
     padding-right: rem(40);
     margin-bottom: 0;
+  }
+  .multi-column-text-two-col & {
+    @include media-breakpoint-up(md) {
+      padding-right: rem(100);
+    }
   }
 }
