--- a/src/components/pull-quote/_pull-quote.scss
+++ b/src/components/pull-quote/_pull-quote.scss
@@ -7,7 +7,7 @@
 }
 
 .pull-quote {
-  background-color: $red;
+  background-color: $iastate-red;
   @extend %outer-pad-x;
   padding: rem(140) rem(36) rem(100);
   position: relative;
