--- a/src/components/link-secondary/_link-secondary.scss
+++ b/src/components/link-secondary/_link-secondary.scss
@@ -3,7 +3,7 @@
   appearance: none;
   margin: rem(10) 0;
   cursor: pointer;
-  color: $red2;
+  color: $iastate-maroon;
   font-family: $nimbus-sans-bold;
   font-weight: 700;
   font-size: rem(18);
@@ -21,14 +21,14 @@
     top: rem(8.125);
     width: rem(8);
     height: rem(7);
-    border-right: rem(2) solid $red2;
-    border-bottom: rem(2) solid $red2;
+    border-right: rem(2) solid $iastate-maroon;
+    border-bottom: rem(2) solid $iastate-maroon;
     transform: rotate(-45deg);
     transition: 0.2s right ease-in-out;
   }
   &:before {
     width: rem(14);
-    border-bottom: rem(2) solid $red2;
+    border-bottom: rem(2) solid $iastate-maroon;
     top: rem(10.21);
     transition: 0.2s transform ease-in-out;
     transform-origin: center left;
