--- a/src/components/link-tertiary/_link-tertiary.scss
+++ b/src/components/link-tertiary/_link-tertiary.scss
@@ -3,7 +3,7 @@
   appearance: none;
   margin: rem(10) 0;
   cursor: pointer;
-  color: $red2;
+  color: $iastate-maroon;
   font-family: $nimbus-sans-bold;
   font-weight: 700;
   font-size: rem(16);
@@ -25,17 +25,17 @@
     top: rem(8.5);
     width: rem(8);
     height: rem(7);
-    border-right: rem(2) solid $red2;
-    border-bottom: rem(2) solid $red2;
+    border-right: rem(2) solid $iastate-maroon;
+    border-bottom: rem(2) solid $iastate-maroon;
     transform: rotate(-45deg);
   }
   &:before {
     width: rem(14);
-    border-bottom: rem(2) solid $red2;
+    border-bottom: rem(2) solid $iastate-maroon;
     top: rem(11.253);
   }
   &:hover {
-    text-decoration-color: $red2;
+    text-decoration-color: $iastate-maroon;
     &:before,
     &:after {
       opacity: 1;
