--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -1,5 +1,3 @@
-@import "variables";
-
 .modal {
   display: none;
 
@@ -17,17 +15,34 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: $modal__overlay-background;
+  background: rgba($white, 0.9);
 }
 
 .modal__container {
-  background-color: $modal__container-background;
-  padding: $modal__container-padding;
-  max-width: $modal__container-max-width;
-  max-height: $modal__container-max-height;
-  border-radius: $modal__container-border-radius;
+  background-color: $white;
+  max-width: rem(414);
+  width: 80%;
+  max-height: 90vh;
+  box-shadow: rem(9) rem(9) rem(20) rgba($black, 0.2);
   overflow-y: auto;
-  box-sizing: border-box;
+  position: relative;
+  padding: rem(45);
+  @include media-breakpoint-up(md) {
+    max-width: rem(844);
+    width: 90%;
+    max-height: 100vh;
+    padding: 0;
+  }
+  @include media-breakpoint-up(lg) {
+    width: 100%;
+  }
+  &.modal__container-with-media {
+    @include media-breakpoint-up(md) {
+      display: flex;
+      align-items: flex-start;
+      flex-wrap: wrap;
+    }
+  }
 }
 
 .modal__header {
@@ -37,13 +52,95 @@
 }
 
 .modal__content {
-  padding: $modal__content-padding;
+  padding: rem(20) 0 0 0;
+  @include media-breakpoint-up(md) {
+    flex: 0 1 auto;
+    width: 100%;
+    padding: rem(45) rem(75) rem(45) rem(54);
+  }
+  .modal__container-with-media & {
+    @include media-breakpoint-up(md) {
+      width: 64%;
+    }
+  }
+  .modal__content-cta {
+    margin-top: rem(20);
+  }
 }
 
 .modal__title {
-  margin: $modal__title-margin;
+  margin: 0 0 rem(10) 0;
+  padding: 0;
+  font-family: $nimbus-sans-bold;
+  font-size: rem(21);
+  line-height: (30 / 21);
+  font-weight: 700;
 }
 
-.modal__close:before {
-  content: $modal__close_before-content;
+.modal__close {
+  background: transparent;
+  z-index: 1;
+  width: rem(44);
+  height: rem(44);
+  position: absolute;
+  top: rem(2);
+  right: rem(2);
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  &:hover {
+    .fa-xmark {
+      color: $iastate-maroon;
+    }
+  }
+  .fa-xmark {
+    pointer-events: none;
+    font-size: rem(25);
+    color: $iastate-red;
+    transition: 0.2s color ease-in-out;
+    @include media-breakpoint-up(md) {
+      font-size: rem(30);
+    }
+  }
+}
+
+.modal__media {
+  @extend %responsive-img;
+  @include media-breakpoint-up(md) {
+    flex: 0 1 auto;
+    width: 36%;
+  }
+  &:before {
+    padding-top: 100%;
+  }
+}
+
+.modal__content-form {
+  margin-top: rem(20);
+  @include media-breakpoint-up(md) {
+    display: flex;
+    align-items: flex-end;
+  }
+  label {
+    margin-bottom: 0;
+    padding-right: rem(10);
+    @include media-breakpoint-up(md) {
+      flex: 0 1 auto;
+      width: 66%;
+    }
+    .label-text {
+      margin-bottom: rem(3);
+    }
+    input {
+      width: 100%;
+    }
+  }
+  button[type="submit"] {
+    @extend %button;
+    margin-bottom: 0;
+    @include media-breakpoint-up(md) {
+      flex: 0 1 auto;
+      width: 34%;
+    }
+  }
 }
