--- a/src/components/statistic/_statistic.scss
+++ b/src/components/statistic/_statistic.scss
@@ -1,10 +1,10 @@
 .statistic {
-  background-color: $red;
+  background-color: $iastate-red;
   padding: rem(65) rem(40);
   position: relative;
   &:before {
     content: "";
-    border-bottom: rem(8) solid $yellow;
+    border-bottom: rem(8) solid $iastate-gold;
     top: rem(-4);
     left: 50%;
     margin-left: rem(-28);
@@ -15,7 +15,7 @@
 }
 
 .statistic__title {
-  color: $yellow;
+  color: $iastate-gold;
   text-align: center;
   font-size: rem(55);
   line-height: (68 / 55);
