--- a/src/scss/_core/_variables.scss
+++ b/src/scss/_core/_variables.scss
@@ -4,18 +4,18 @@
 $primary: #369;
 $secondary: #4e7dab;
 $tertiary: #7ba3ca;
-$white: #fff;
+$white: #ffffff;
 $off-white: #f5f5f5;
 $light-grey: #ebebeb;
-$dark-grey: #003d4c;
+$iastate-dark-blue: #003d4c;
 $grey: #4a4a4a;
 $grey2: #e0e0e0;
-$grey3: #f3f3f3;
+$light-grey: #f3f3f3;
 $grey4: #707070;
 $black: #000000;
-$red: #c8102e;
-$red2: #7c2529;
-$yellow: #f1be48;
+$iastate-red: #c8102e;
+$iastate-maroon: #7c2529;
+$iastate-gold: #f1be48;
 
 /* Fonts
    ========================================================================== */
