--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -7,7 +7,7 @@
   left: 0;
   z-index: 11;
   width: 100vw;
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     width: auto;
   }
   > * {
@@ -29,10 +29,10 @@
   }
   @include media-breakpoint-up(lg) {
     max-width: rem(346);
-    top: rem(37);
     width: 25%;
   }
   @include media-breakpoint-up(xl) {
+    top: rem(37);
     left: rem(82);
   }
 
@@ -42,26 +42,16 @@
   }
 
   .site-header__logo-mobile {
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       display: none;
     }
   }
 
   .site-header__logo-desktop {
     display: none;
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       display: block;
     }
-  }
-}
-
-.site-header__top,
-.site-header__main {
-  @include media-breakpoint-up(lg) {
-    padding-left: rem(120 + 24);
-  }
-  @include media-breakpoint-up(xl) {
-    padding-left: rem(170 + 36 + 36);
   }
 }
 
@@ -74,13 +64,10 @@
   padding-bottom: rem(54);
   justify-content: flex-end;
   border-bottom: rem(1) solid $grey4;
-  @include media-breakpoint-up(lg) {
-    padding: 0 rem(20) 0;
-    height: rem(117);
-    align-items: flex-start;
-  }
   @include media-breakpoint-up(xl) {
     padding: 0 rem(60) 0;
+    height: rem(117);
+    align-items: flex-start;
   }
   ul {
     display: flex;
@@ -108,12 +95,10 @@
 .site-header__utility {
   position: relative;
   display: none;
-  @include media-breakpoint-up(lg) {
-    display: block;
-    margin-top: rem(27);
-  }
   @include media-breakpoint-up(xl) {
+    display: block;
     margin-right: rem(53);
+    margin-top: rem(27);
   }
   a {
     @include media-breakpoint-up(lg) {
@@ -151,7 +136,7 @@
   align-self: stretch;
   height: rem(54);
   width: rem(54);
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     position: relative;
     top: rem(14);
   }
@@ -206,7 +191,7 @@
       opacity: 1;
       visibility: visible;
     }
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       opacity: 1;
       visibility: visible;
     }
@@ -227,7 +212,7 @@
 .site-header__mega-menu-scroller {
   height: 100%;
   overflow-y: auto;
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     overflow: initial;
     pointer-events: none;
   }
@@ -256,7 +241,7 @@
   text-decoration: none;
   background-color: transparent;
   border: none;
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     display: none;
   }
   .site-header__mega-menu-open-line-wrap {
@@ -302,16 +287,16 @@
 .site-header__mega-menu-main {
   background-color: $iastate-red;
   padding: rem(60) rem(36);
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     background-color: transparent;
-    padding: 0;
+    padding: 0 rem(92) 0 0;
     margin-top: rem(13);
   }
 }
 
 .site-header__mega-menu-main-nav {
   > ul {
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       display: flex;
       justify-content: flex-end;
       width: 65%;
@@ -319,8 +304,8 @@
     }
     > li {
       margin-bottom: rem(22);
-      @include media-breakpoint-up(lg) {
-        padding-right: rem(30);
+      @include media-breakpoint-up(xl) {
+        padding-right: rem(40);
         margin-bottom: 0;
         transition: 0.3s opacity ease-in-out;
         position: relative;
@@ -328,7 +313,7 @@
       > a {
         @extend %button;
         @extend %button--reverse;
-        @include media-breakpoint-up(lg) {
+        @include media-breakpoint-up(xl) {
           padding: 0;
           background-color: transparent;
           border: none;
@@ -341,7 +326,7 @@
             display: none;
           }
           &:after {
-            @include media-breakpoint-up(lg) {
+            @include media-breakpoint-up(xl) {
               content: "";
               display: block;
               position: absolute;
@@ -359,22 +344,22 @@
         }
 
         &:hover {
-          @include media-breakpoint-up(lg) {
+          @include media-breakpoint-up(xl) {
             background-color: transparent;
             padding-right: 0;
           }
           &:after {
-            @include media-breakpoint-up(lg) {
+            @include media-breakpoint-up(xl) {
               border-color: $iastate-maroon;
             }
           }
         }
         &[aria-expanded="true"] {
-          @include media-breakpoint-up(lg) {
+          @include media-breakpoint-up(xl) {
             border-bottom: rem(7) solid $iastate-gold;
           }
           &:after {
-            @include media-breakpoint-up(lg) {
+            @include media-breakpoint-up(xl) {
               transform: rotate(225deg);
               top: rem(10);
               border-color: $iastate-maroon;
@@ -393,7 +378,7 @@
         left: 0;
         transition: 0.3s opacity ease-in-out, 0.3s transform ease-in-out, 0.3s visibility ease-in-out;
         z-index: 1;
-        @include media-breakpoint-up(lg) {
+        @include media-breakpoint-up(xl) {
           background-color: $white;
           margin-top: rem(24);
           padding: rem(40) rem(52) rem(5) rem(52);
@@ -411,7 +396,7 @@
           opacity: 0;
           transform: translate3d(100%, 0, 0);
           visibility: hidden;
-          @include media-breakpoint-up(lg) {
+          @include media-breakpoint-up(xl) {
             transform: translate3d(0, #{rem(30)}, 0);
           }
         }
@@ -421,12 +406,12 @@
           visibility: visible;
         }
         &.two-column-dropdown {
-          @include media-breakpoint-up(lg) {
+          @include media-breakpoint-up(xl) {
             min-width: rem(727);
             left: rem(-243);
           }
           li {
-            @include media-breakpoint-up(lg) {
+            @include media-breakpoint-up(xl) {
               width: 50%;
             }
           }
@@ -435,7 +420,7 @@
         li {
           margin-bottom: rem(10);
           padding-left: rem(14);
-          @include media-breakpoint-up(lg) {
+          @include media-breakpoint-up(xl) {
             flex: 0 1 auto;
             width: 100%;
             padding-left: 0;
@@ -475,7 +460,7 @@
       &:last-child,
       &:nth-last-child(2) {
         > ul {
-          @include media-breakpoint-up(lg) {
+          @include media-breakpoint-up(xl) {
             right: 0;
             left: initial;
           }
@@ -494,7 +479,7 @@
     text-decoration-color: $white;
     text-decoration-thickness: rem(1);
     text-underline-offset: rem(1);
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       color: $iastate-maroon;
       line-height: (34 / 18);
       text-decoration-color: $iastate-maroon;
@@ -503,7 +488,7 @@
 }
 
 .site-header__mega-menu-main-nav-dropdown-back-wrap {
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     display: none;
   }
 }
@@ -553,7 +538,7 @@
 }
 
 .site-header__mega-menu-main-nav-dropdown-parent-wrap {
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     order: 1;
     width: 100% !important;
     border-top: rem(2) solid $iastate-gold;
@@ -570,7 +555,7 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
   color: $white;
   text-decoration: none;
   margin-left: rem(-14);
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     color: $iastate-maroon;
     font-size: rem(18);
     line-height: (31 / 18);
@@ -581,7 +566,7 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
 .site-header__mega-menu-secondary {
   background-color: $iastate-red;
   padding: 0 rem(36) rem(60);
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     display: none;
   }
 }
@@ -628,6 +613,7 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
     padding: 0;
     max-width: rem(1061);
     width: 85%;
+    box-shadow: none;
   }
   .modal__close {
     position: fixed;
@@ -659,7 +645,7 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
     line-height: (33 / 18);
     padding: rem(2) rem(28) 0;
     width: 100%;
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       height: rem(60);
     }
     &::placeholder {
@@ -688,7 +674,7 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
   position: relative;
   transition: 0.3s background-color ease-in-out;
   font-size: rem(35);
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     font-size: rem(40);
   }
 }
