--- a/src/components/link-secondary/link-secondary.twig
+++ b/src/components/link-secondary/link-secondary.twig
@@ -1,1 +1,1 @@
-<a href="{{url}}" class="link-secondary">{{text}}</a>
+<a href="{{url}}" class="link-secondary">{{text}}<span class="arrow"></span></a>
