--- a/src/components/link-set/link-set.twig
+++ b/src/components/link-set/link-set.twig
@@ -2,7 +2,7 @@
   <ul>
     {% for link in links %}
     <li>
-      <a href="{{link.url}}" class="link-set__link{% if link.variant %} {{link.variant}}{% endif %}">{{link.text}}</a>
+      <a href="{{link.url}}" class="link-set__link{% if link.variant %} {{link.variant}}{% endif %}">{{link.text}}{% if link.variant %}<span class="arrow"></span>{% endif %}</a>
     </li>
     {% endfor %}
   </ul>
